--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.4.6",
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
+    "lz-string": "^1.5.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
