--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^12.5.0",
     "lucide-react": "^0.483.0",
     "lz-string": "^1.5.0",
+    "pako": "^2.1.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
